dh-python (4.20200413) UNRELEASED; urgency=medium

  * Add new pybuild plugin to enable flit built packages to build using
    pyproject.toml instead of distutils/setuptools setup.py
  * Update dh-python for removal of python3.7 from supported python3 versions
    (closes: #956190)
    - Drop python3.7 from dhpython/_versions.py supported versions
    - Disable obsolete doctest in dhpython/interpreter.py

 -- Scott Kitterman <scott@kitterman.com>  Fri, 10 Apr 2020 15:45:14 -0400

dh-python (4.20200315) unstable; urgency=medium

  [ Piotr Ożarowski ]
  * Adjust for Python 3.8
    - fix setting _PYTHON_SYSCONFIGDATA_NAME (closes: 948320)
    - update tests (closes: 952122)
  * Add dh-python to Depends in autopkgtest (closes: 947789)
  * pybuild: add support for nose2. Enable by adding python3-nose2 to
    Build-Depends or --test-nose2 option or PYBUILD_TEST_NOSE2=1 env. var.
    (closes: 950912)

  [ Simon Ruggier ]
  * Fix a problem in handling ranges with no minimum
  
  [ Matthias Klose ]
  * Fix setting _PYTHON_HOST_PLATFORM (closes: 948319)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 15 Mar 2020 20:46:09 +0100

dh-python (4.20191017) unstable; urgency=medium

  * dh_python2: generate python2 dependencies instead of python ones
    (to make "python" package removal a bit easier)
  * generate pylint dependencies instead of pylint3 (Python 3.X files moved to
    new binary package)

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 17 Oct 2019 22:26:10 +0200

dh-python (4.20190722) unstable; urgency=medium

  * Build-depend on python3-docutils to build manpages
    (reintroduces circular dependencies problem, but makes Python 2.X removal
    a bit easier) 
  * Use debhelper compat level 12
  * Standards-Version is 4.4.0 now (no changes needed)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 22 Jul 2019 17:40:36 +0200

dh-python (3.20190308) unstable; urgency=medium

  * so2pyver: add a fallback to UTF-8 if locale.getdefaultlocale() returns None
    closes: 923990
